fix: bsl timeline alignment

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1150,6 +1150,12 @@ select {
     margin-left: 5rem;
     margin-right: 5rem;
 }
+.mt-4 {
+    margin-top: 1rem;
+}
+.mt-8 {
+    margin-top: 2rem;
+}
 .mb-4 {
     margin-bottom: 1rem;
 }
@@ -1183,9 +1189,6 @@ select {
 .mt-2 {
     margin-top: 0.5rem;
 }
-.mt-8 {
-    margin-top: 2rem;
-}
 .mb-1 {
     margin-bottom: 0.25rem;
 }
@@ -1213,15 +1216,6 @@ select {
 .-ml-28 {
     margin-left: -7rem;
 }
-.mt-4 {
-    margin-top: 1rem;
-}
-.mt-6 {
-    margin-top: 1.5rem;
-}
-.mt-64 {
-    margin-top: 16rem;
-}
 .mt-24 {
     margin-top: 6rem;
 }
@@ -1230,6 +1224,9 @@ select {
 }
 .mt-12 {
     margin-top: 3rem;
+}
+.mt-6 {
+    margin-top: 1.5rem;
 }
 .-mb-0\.5 {
     margin-bottom: -0.125rem;
@@ -1393,6 +1390,9 @@ select {
 .mb-0 {
     margin-bottom: 0px;
 }
+.mt-64 {
+    margin-top: 16rem;
+}
 .ml-1 {
     margin-left: 0.25rem;
 }
@@ -1413,6 +1413,12 @@ select {
 }
 .-ml-5 {
     margin-left: -1.25rem;
+}
+.mb-7 {
+    margin-bottom: 1.75rem;
+}
+.mb-10 {
+    margin-bottom: 2.5rem;
 }
 .block {
     display: block;
@@ -2656,6 +2662,14 @@ select {
     padding-left: 1rem;
     padding-right: 1rem;
 }
+.py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+}
+.px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
 .px-12 {
     padding-left: 3rem;
     padding-right: 3rem;
@@ -2683,14 +2697,6 @@ select {
 .py-8 {
     padding-top: 2rem;
     padding-bottom: 2rem;
-}
-.py-3 {
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
-}
-.px-8 {
-    padding-left: 2rem;
-    padding-right: 2rem;
 }
 .py-2 {
     padding-top: 0.5rem;
@@ -2802,14 +2808,14 @@ select {
 .pb-7 {
     padding-bottom: 1.75rem;
 }
+.pt-7 {
+    padding-top: 1.75rem;
+}
 .pt-\[121px\] {
     padding-top: 121px;
 }
 .pt-\[63px\] {
     padding-top: 63px;
-}
-.pr-12 {
-    padding-right: 3rem;
 }
 .pl-\[130px\] {
     padding-left: 130px;
@@ -2899,6 +2905,14 @@ select {
     font-size: 1.875rem;
     line-height: 2.25rem;
 }
+.text-8xl {
+    font-size: 6rem;
+    line-height: 1;
+}
+.text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+}
 .text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
@@ -2910,14 +2924,6 @@ select {
 .text-xs {
     font-size: 0.75rem;
     line-height: 1rem;
-}
-.text-8xl {
-    font-size: 6rem;
-    line-height: 1;
-}
-.text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
 }
 .text-\[64px\] {
     font-size: 64px;
@@ -2984,11 +2990,11 @@ select {
 .leading-7 {
     line-height: 1.75rem;
 }
-.tracking-wider {
-    letter-spacing: 0.05em;
-}
 .tracking-wide {
     letter-spacing: 0.025em;
+}
+.tracking-wider {
+    letter-spacing: 0.05em;
 }
 .text-blue-300 {
     --tw-text-opacity: 1;
@@ -3089,6 +3095,10 @@ select {
     --tw-text-opacity: 1;
     color: rgb(118 169 250 / var(--tw-text-opacity));
 }
+.text-indigo-400 {
+    --tw-text-opacity: 1;
+    color: rgb(141 162 251 / var(--tw-text-opacity));
+}
 .text-red-700 {
     --tw-text-opacity: 1;
     color: rgb(200 30 30 / var(--tw-text-opacity));
@@ -3140,10 +3150,6 @@ select {
 .text-gray-200 {
     --tw-text-opacity: 1;
     color: rgb(229 231 235 / var(--tw-text-opacity));
-}
-.text-indigo-400 {
-    --tw-text-opacity: 1;
-    color: rgb(141 162 251 / var(--tw-text-opacity));
 }
 .underline {
     -webkit-text-decoration-line: underline;
@@ -3568,6 +3574,12 @@ select {
     opacity: 1;
 }
 
+.hover\:shadow-md:hover {
+    --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .hover\:shadow-xl:hover {
     --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
     --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
@@ -3577,12 +3589,6 @@ select {
 .hover\:shadow-lg:hover {
     --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
     --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-md:hover {
-    --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-    --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -4144,14 +4150,6 @@ select {
         margin-right: 6rem;
     }
 
-    .md\:mt-4 {
-        margin-top: 1rem;
-    }
-
-    .md\:mt-72 {
-        margin-top: 18rem;
-    }
-
     .md\:mt-0 {
         margin-top: 0px;
     }
@@ -4162,6 +4160,14 @@ select {
 
     .md\:mb-0 {
         margin-bottom: 0px;
+    }
+
+    .md\:mt-4 {
+        margin-top: 1rem;
+    }
+
+    .md\:mt-72 {
+        margin-top: 18rem;
     }
 
     .md\:block {
@@ -4579,6 +4585,10 @@ select {
         grid-template-columns: repeat(3, minmax(0, 1fr));
     }
 
+    .xl\:pb-7 {
+        padding-bottom: 1.75rem;
+    }
+
     .xl\:blur {
         --tw-blur: blur(8px);
         filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -4593,6 +4603,10 @@ select {
 
     .\32xl\:grid-cols-4 {
         grid-template-columns: repeat(4, minmax(0, 1fr));
+    }
+
+    .\32xl\:pb-7 {
+        padding-bottom: 1.75rem;
     }
 }
 
